// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should render empty state 1`] = `
<DocumentFragment>
  <section
    class="bg-theme-neutral-100"
  >
    <div
      class="px-10 py-14 bg-theme-background"
    >
      <div
        class="flex justify-between"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="text-3xl font-semibold"
          >
            My Registrations
          </span>
          <span
            class="text-theme-neutral-600"
          >
            You can register a Delagate, Business and Bridgechain.
          </span>
        </div>
        <button
          class="sc-AxjAm ddQVWI self-end"
          color="primary"
          type="button"
        >
          Register
        </button>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center px-10 py-20 mt-4 bg-theme-background"
      data-testid="my-registrations__empty-state"
    >
      <svg>
        register.svg
      </svg>
      <span
        class="text-sm mt-7 text-theme-neutral-600"
      >
        Register Business, Bridgechain and Delegate in the most convenient way.
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Welcome should render null for a not knwown type of table 1`] = `
<DocumentFragment>
  <section
    class="bg-theme-neutral-100"
  >
    <div
      class="px-10 py-14 bg-theme-background"
    >
      <div
        class="flex justify-between"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="text-3xl font-semibold"
          >
            My Registrations
          </span>
          <span
            class="text-theme-neutral-600"
          >
            You can register a Delagate, Business and Bridgechain.
          </span>
        </div>
        <button
          class="sc-AxjAm ddQVWI self-end"
          color="primary"
          type="button"
        >
          Register
        </button>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Welcome should render properly 1`] = `
<DocumentFragment>
  <section
    class="bg-theme-neutral-100"
  >
    <div
      class="px-10 py-14 bg-theme-background"
    >
      <div
        class="flex justify-between"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="text-3xl font-semibold"
          >
            My Registrations
          </span>
          <span
            class="text-theme-neutral-600"
          >
            You can register a Delagate, Business and Bridgechain.
          </span>
        </div>
        <button
          class="sc-AxjAm ddQVWI self-end"
          color="primary"
          type="button"
        >
          Register
        </button>
      </div>
    </div>
    <div
      class="flex flex-col px-10 mt-4 bg-theme-background"
    >
      <span
        class="py-10 text-2xl font-bold"
      >
        Business
      </span>
      <div
        class="sc-AxhUy fkVaYz"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible"
                >
                  <div
                    class="mr-1"
                  >
                    Avatar
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Agent
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Business Name
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md -ml-8"
                >
                  <div
                    class="mr-1"
                  >
                    History
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md ml-8 -mr-6"
                >
                  <div
                    class="mr-1"
                  >
                    Website
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    MSQ
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md ml-2"
                >
                  <div
                    class="mr-1"
                  >
                    Repository
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--7"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible float-right"
                >
                  <div
                    class="mr-1"
                  >
                    Spacer
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--8"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible float-right"
                >
                  <div
                    class="mr-1"
                  >
                    Options
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="border-b border-dashed border-theme-neutral-light"
              data-testid="business-table__row"
            >
              <td
                class="w-24 py-4"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="sc-AxirZ cZokSJ border-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        business.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
                    data-testid="Avatar"
                  />
                </div>
              </td>
              <td
                class="py-4 mt-1 font-semibold"
              >
                <span>
                  OLEBank
                </span>
              </td>
              <td
                class="py-1 font-semibold"
              >
                <span>
                  ARK Ecosystem
                </span>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <span
                  class="-ml-8"
                >
                  View
                </span>
              </td>
              <td
                class="py-1 text-theme-neutral-400"
              >
                <div
                  class="sc-AxiKw dzBdqj ml-12"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <div
                  class="sc-AxiKw fFXzuz ml-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <span
                  class="ml-3"
                >
                  View
                </span>
              </td>
              <td
                class="px-1 px-12"
              />
              <td
                class="float-right py-1"
              >
                <button
                  class="sc-AxjAm kTAyCf mt-4"
                  color="primary"
                  type="button"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="float-right outline-none cursor-pointer focus:outline-none"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </td>
            </tr>
            <tr
              class="border-b border-dashed border-theme-neutral-light"
              data-testid="business-table__row"
            >
              <td
                class="w-24 py-4"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="sc-AxirZ cZokSJ border-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        business.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
                    data-testid="Avatar"
                  />
                </div>
              </td>
              <td
                class="py-4 mt-1 font-semibold"
              >
                <span>
                  OLEBank
                </span>
              </td>
              <td
                class="py-1 font-semibold"
              >
                <span>
                  ARK Ecosystem
                </span>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <span
                  class="-ml-8"
                >
                  View
                </span>
              </td>
              <td
                class="py-1 text-theme-neutral-400"
              >
                <div
                  class="sc-AxiKw dzBdqj ml-12"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <div
                  class="sc-AxiKw fFXzuz ml-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <span
                  class="ml-3"
                >
                  View
                </span>
              </td>
              <td
                class="px-1 px-12"
              />
              <td
                class="float-right py-1"
              >
                <button
                  class="sc-AxjAm kTAyCf mt-4"
                  color="primary"
                  type="button"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="float-right outline-none cursor-pointer focus:outline-none"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="flex flex-col px-10 mt-4 bg-theme-background"
    >
      <span
        class="py-10 text-2xl font-bold"
      >
        Blockchain
      </span>
      <div
        class="sc-AxhUy fkVaYz"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible"
                >
                  <div
                    class="mr-1"
                  >
                    Avatar
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Agent
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Blockchain Name
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    History
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Website
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    MSQ
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md ml-4"
                >
                  <div
                    class="mr-1"
                  >
                    Repository
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--7"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md -ml-4"
                >
                  <div
                    class="mr-1"
                  >
                    Seed
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--8"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible float-right"
                >
                  <div
                    class="mr-1"
                  >
                    Spacer
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--9"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible float-right"
                >
                  <div
                    class="mr-1"
                  >
                    Options
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="border-b border-dashed border-theme-neutral-light"
              data-testid="blockchain-table__row"
            >
              <td
                class="w-24 py-4"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="sc-AxirZ cZokSJ border-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        business.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
                    data-testid="Avatar"
                  />
                </div>
              </td>
              <td
                class="py-4 mt-1 font-semibold"
              >
                <span>
                  OLEBank
                </span>
              </td>
              <td
                class="py-1 font-semibold"
              >
                <span>
                  ARK Ecosystem
                </span>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <span>
                  View
                </span>
              </td>
              <td
                class="py-1 text-theme-neutral-400"
              >
                <div
                  class="sc-AxiKw dzBdqj ml-4"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <div
                  class="sc-AxiKw fFXzuz ml-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <span
                  class="ml-7"
                >
                  View
                </span>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <span
                  class="-ml-5"
                >
                  View
                </span>
              </td>
              <td
                class="px-1 px-11"
              />
              <td
                class="float-right py-1"
              >
                <button
                  class="sc-AxjAm kTAyCf mt-4"
                  color="primary"
                  type="button"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="float-right outline-none cursor-pointer focus:outline-none"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </td>
            </tr>
            <tr
              class="border-b border-dashed border-theme-neutral-light"
              data-testid="blockchain-table__row"
            >
              <td
                class="w-24 py-4"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="sc-AxirZ cZokSJ border-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        business.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
                    data-testid="Avatar"
                  />
                </div>
              </td>
              <td
                class="py-4 mt-1 font-semibold"
              >
                <span>
                  OLEBank
                </span>
              </td>
              <td
                class="py-1 font-semibold"
              >
                <span>
                  ARK Ecosystem
                </span>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <span>
                  View
                </span>
              </td>
              <td
                class="py-1 text-theme-neutral-400"
              >
                <div
                  class="sc-AxiKw dzBdqj ml-4"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <div
                  class="sc-AxiKw fFXzuz ml-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <span
                  class="ml-7"
                >
                  View
                </span>
              </td>
              <td
                class="py-1 text-semibold text-theme-primary"
              >
                <span
                  class="-ml-5"
                >
                  View
                </span>
              </td>
              <td
                class="px-1 px-11"
              />
              <td
                class="float-right py-1"
              >
                <button
                  class="sc-AxjAm kTAyCf mt-4"
                  color="primary"
                  type="button"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="float-right outline-none cursor-pointer focus:outline-none"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="flex flex-col px-10 mt-4 bg-theme-background"
    >
      <span
        class="py-10 text-2xl font-bold"
      >
        Delegate
      </span>
      <div
        class="sc-AxhUy fkVaYz"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible"
                >
                  <div
                    class="mr-1"
                  >
                    Avatar
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Delegate Name
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md -ml-14"
                >
                  <div
                    class="mr-1"
                  >
                    Rank
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    MSQ
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md"
                >
                  <div
                    class="mr-1"
                  >
                    Status
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  invisible w-3 float-right"
                >
                  <div
                    class="mr-1"
                  >
                    Amount
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  font-semibold text-md float-right ml-32"
                >
                  <div
                    class="mr-1"
                  >
                    Votes
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="border-b border-dashed border-theme-neutral-light"
              data-testid="delegate-table__row"
            >
              <td
                class="w-24 py-4"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="sc-AxirZ cZokSJ border-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        business.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
                    data-testid="Avatar"
                  />
                </div>
              </td>
              <td
                class="py-4 mt-1 font-semibold"
              >
                <span>
                  OLEBank
                </span>
              </td>
              <td
                class="py-1 text-theme-neutral-700"
              >
                <span
                  class="-ml-14"
                >
                  #2
                </span>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <div
                  class="sc-AxiKw fFXzuz"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-theme-neutral-400"
              >
                <div
                  class="sc-AxiKw iRsrJT ml-1 text-theme-success"
                  height="30"
                  width="30"
                >
                  <svg>
                    checkmark.svg
                  </svg>
                </div>
              </td>
              <td>
                <div
                  class="flex float-right text-semibold text-theme-neutral-800"
                >
                  <div
                    class="flex items-center"
                  >
                    <span
                      class="ml-16"
                    >
                      2,450.643
                    </span>
                    <div
                      class="sc-AxiKw dzBdqj ml-2"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="w-1/12 text-semibold text-theme-neutral-800"
              >
                <div
                  class="flex items-center ml-5 -mr-10"
                >
                  <small
                    class="text-theme-neutral-500"
                  >
                    2,43%
                  </small>
                  <span
                    class="ml-1"
                  >
                    2,450.643
                  </span>
                  <div
                    class="sc-AxiKw dzBdqj ml-2"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td
                class="float-right py-1"
              >
                <button
                  class="sc-AxjAm kTAyCf mt-4"
                  color="primary"
                  type="button"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="float-right outline-none cursor-pointer focus:outline-none"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </td>
            </tr>
            <tr
              class="border-b border-dashed border-theme-neutral-light"
              data-testid="delegate-table__row"
            >
              <td
                class="w-24 py-4"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="sc-AxirZ cZokSJ border-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        business.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
                    data-testid="Avatar"
                  />
                </div>
              </td>
              <td
                class="py-4 mt-1 font-semibold"
              >
                <span>
                  OLEBank
                </span>
              </td>
              <td
                class="py-1 text-theme-neutral-700"
              >
                <span
                  class="-ml-14"
                >
                  #352
                </span>
              </td>
              <td
                class="py-1 text-bold text-theme-primary"
              >
                <div
                  class="sc-AxiKw fFXzuz"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </td>
              <td
                class="py-1 text-theme-neutral-400"
              >
                <div
                  class="sc-AxiKw dzBdqj ml-2 text-theme-neutral-500"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    status-clock.svg
                  </svg>
                </div>
              </td>
              <td>
                <div
                  class="flex float-right text-semibold text-theme-neutral-800"
                >
                  <div
                    class="flex items-center"
                  >
                    <span
                      class="ml-16"
                    >
                      2,450.643
                    </span>
                    <div
                      class="sc-AxiKw dzBdqj ml-2"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="w-1/12 text-semibold text-theme-neutral-800"
              >
                <div
                  class="flex items-center ml-5 -mr-10"
                >
                  <small
                    class="text-theme-neutral-500"
                  >
                    2,43%
                  </small>
                  <span
                    class="ml-1"
                  >
                    2,450.643
                  </span>
                  <div
                    class="sc-AxiKw dzBdqj ml-2"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td
                class="float-right py-1"
              >
                <button
                  class="sc-AxjAm kTAyCf mt-4"
                  color="primary"
                  type="button"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="float-right outline-none cursor-pointer focus:outline-none"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
